--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>Karla De Jesus</title>
     </head>
-<!-- Your HTML Here -->
+    <body>
+        <div class="boxy">
+            <div class="searchBar">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEX/AAAZ4gk3AAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEX//wCKxvRFAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEUAgACc+aWRAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC">
+                <h3>Karla De Jesus</h3>
+            </div>
+            <div class="infoCard">
+                <div class="images">
+                    <img class="image" src="IMG_7974.jpeg">
+                </div>
+                <div>
+                    <p>Hi! My name is Karla De Jesus and I am a first-year Computer Science major from boynton Beach Florida! Something that I am passionate about is climate change. In my free time, I like to read, write, and play the piano. </p>
+                </div>    
+            </div>
+        </div>
+    </body>
 </html>
